temparorily fix ubuntu version of leela zero integration

--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,10 @@
 [General]
-language = 
+language = en
 sgffolder = 
 rsgffolder = 
 pngfolder = 
 livefolder = live_analysis
-stonesound =
+stonesound = 
 
 [Analysis]
 maxvariations = 26
@@ -18,7 +18,7 @@ fuzzystoneplacement = .2
 realgamesequencedeepness = 5
 leftgobanratio = 0.4
 rightgobanratio = 0.4
-rightpanelratio = 0.2
+rightpanelratio = 0.200625
 opengobanratio = 0.4
 maxvariations = 10
 variationscoloring = blue_for_winning
@@ -27,7 +27,7 @@ invertedmousewheel = False
 lastgraph = 
 yellowbar = #F39C12
 lastbot = 
-lastmap =
+lastmap = 
 oneortwopanels = 1
 
 [Live]
@@ -35,9 +35,9 @@ size = 19
 komi = 7.5
 handicap = 0
 nooverlap = False
-analyser =
-black =
-white =
+analyser = LeelaZero - Slow
+black = Human player
+white = LeelaZero - Fast
 livegobanratio = 0.4
 thinkbeforeplaying = 0
 
@@ -52,7 +52,6 @@ profile = Fast
 command = 
 parameters = --gtp --noponder
 timepermove = 5
-
 
 [GnuGo-0]
 profile = Slow
@@ -88,18 +87,6 @@ profile = Fast
 command = 
 parameters = --config=aq_config_fast.txt
 
-[LeelaZero-0]
-profile = Slow
-command = 
-parameters = --gtp --noponder --weights weights.txt
-timepermove = 15
-
-[LeelaZero-1]
-profile = Fast
-command = 
-parameters = --gtp --noponder --weights weights.txt
-timepermove = 5
-
 [Pachi-0]
 profile = Slow (19x19)
 command = 
@@ -123,7 +110,6 @@ profile = Fast (9x9)
 command = 
 parameters = reporting=json,dynkomi=linear:handicap_value=8%8:moves=15%15
 timepermove = 5
-
 
 [PhoenixGo-windows-GPU-0]
 profile = Example-windows-GPU-notensorrt-Slow
@@ -154,3 +140,20 @@ profile = Example-linux-CPU-Slow
 command = 
 parameters = --gtp --config_path=/home/yourusername/PhoenixGo/etc/mcts_cpu_grp.conf --logtostderr --v=1
 timepermove = 60
+
+[LeelaZero-0]
+profile = Slow
+parameters = --gtp --noponder --weights leela-zero/weights.txt
+variations = 4
+command = leela-zero/leelaz
+timepermove = 15
+deepness = 4
+
+[LeelaZero-1]
+profile = Fast
+parameters = --gtp --noponder --weights leela-zero/weights.txt
+variations = 4
+command = leela-zero/leelaz
+timepermove = 5
+deepness = 4
+
